# MBFlairBot

./: MBFlairBot.py  example-config.properties  pyproject.toml  requirements.txt
